app/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: task.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8090
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 3001
